# kalshi-arbitrage-bot

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
config/: __init__.py  logging_config.py  settings.py
scripts/: find_events.py  quick_scan.py  run_bot.py  scan_arbitrage.py  test_connection.py
src/: __init__.py
src/arbitrage/: __init__.py  calculator.py  detector.py
src/arbitrage/strategies/: __init__.py  correlated.py  multioutcome.py  time_based.py
src/bot/: __init__.py  engine.py
src/core/: __init__.py  authenticator.py  client.py  exceptions.py  rate_limiter.py
src/data/: __init__.py  market_fetcher.py  models.py  orderbook_manager.py  websocket_client.py
src/execution/: __init__.py  executor.py  order_manager.py  position_tracker.py
src/monitoring/: __init__.py  alerting.py  metrics.py
src/risk/: __init__.py  circuit_breaker.py  exposure_manager.py
tests/: __init__.py  conftest.py
tests/unit/: test_calculator.py  test_circuit_breaker.py  test_multioutcome_strategy.py
